option(
  'iolibs',
  type : 'array',
  choices : [
    'disk', 'vusb', 'ptpip', 'serial', 'libusb1', 'usb', 'usbdiskdirect', 'usbscsi'
  ],
  value : [
    'disk', 'ptpip', 'serial', 'libusb1', 'usb', 'usbdiskdirect', 'usbscsi'
  ]
)
option(
  'camlibs',
  type : 'array',
  choices : [
    'adc65', 'agfa-cl20', 'aox', 'ax203', 'barbie', 'canon', 'casio',
    'clicksmart310', 'digigr8', 'digita', 'dimera', 'directory', 'docupen',
    'enigma13', 'fuji', 'gsmart300', 'hp215', 'iclick', 'jamcam', 'jd11',
    'jl2005a', 'jl2005c', 'kodak', 'konica', 'largan', 'lg_gsm', 'lumix',
    'mars', 'minolta', 'mustek', 'panasonic', 'pccam300', 'pccam600', 'pentax',
    'polaroid', 'ptp2', 'quicktake1x0', 'ricoh', 'samsung', 'sierra', 'sipix',
    'smal', 'sonix', 'sonydscf1', 'sonydscf55', 'soundvision', 'spca50x',
    'sq905', 'st2205', 'stv0674', 'stv0680', 'sx330z', 'topfield', 'toshiba',
    'tp6801',
  ],
  value : [
    'adc65', 'agfa-cl20', 'aox', 'ax203', 'barbie', 'canon', 'casio',
    'clicksmart310', 'digigr8', 'digita', 'dimera', 'directory', 'docupen',
    'enigma13', 'fuji', 'gsmart300', 'hp215', 'iclick', 'jamcam', 'jd11',
    'jl2005a', 'jl2005c', 'kodak', 'konica', 'largan', 'lg_gsm', 'lumix',
    'mars', 'minolta', 'mustek', 'panasonic', 'pccam300', 'pccam600', 'pentax',
    'polaroid', 'ptp2', 'quicktake1x0', 'ricoh', 'samsung', 'sierra', 'sipix',
    'smal', 'sonix', 'sonydscf1', 'sonydscf55', 'soundvision', 'spca50x',
    'sq905', 'st2205', 'stv0674', 'stv0680', 'sx330z', 'topfield', 'toshiba',
    'tp6801',
  ]
)
option('docs', type : 'boolean', value : false)
option('docs-internal', type : 'boolean', value : false)
option('udevscriptdir', type : 'string', value : '')