# We're not using @BINDING_SUBDIRS@ here because we want to ship
# the bindings in the "make dist" tarball regardless of whether
# the system building the tarball has mono, java, or python installed.
#
# However, we are only shipping those bindings which actually work.
SUBDIRS = # csharp
# SUBDIRS = @BINDING_SUBDIRS@
